2003-02-23  Alexandre Duret-Lutz  <adl@gnu.org>

	* automake.texi (FAQ, CVS, maintainer-mode, wildcards)
	(distcleancheck): Fix typos and other errors reported by Karl
	Berry.

2003-02-20  Alexandre Duret-Lutz  <adl@gnu.org>

	* configure.in: Bump version to 1.7.3a.

	* configure.in, NEWS: Bump version to 1.7.3.

	* lib/am/texibuild.am (%SOURCE_SUFFIX%%DEST_SUFFIX%): Use $(...)
	instead of ${...}.

	* tests/defs.in: Handle required=ro-dir.
	* tests/destdir.test: Use this.

2003-02-19  Richard Dawe  <rich@phekda.freeserve.co.uk>

	* lib/am/distdir.am (distcheck): Strip any leading DOS drive
	from dc_install_base.

2003-02-19  Alexandre Duret-Lutz  <adl@gnu.org>

	* lib/am/texinfos.am (install-info-am, uninstall-info-am): Install
	DJGPP-style *.iNN info files.
	(maintainer-clean-aminfo): Rewrite using the same pattern
	as in uninstall-info-am.
	* lib/am/texibuild.am (%SOURCE_SUFFIX%%DEST_SUFFIX%): Erase
	DJGPP-style *.iNN info files before running $(MAKEINFO).
	* tests/txinfo19.test: New file.
	* tests/Makefile.am (TESTS): Add txinfo19.test.

2003-02-18  Richard Dawe  <rich@phekda.freeserve.co.uk>

	* lib/depcomp (dashmstdout): Cope with DOS filenames in
	dependencies.

2003-02-17  Alexandre Duret-Lutz  <adl@gnu.org>

	* lib/depcomp (makedepend): Don't pass $object to makedepend.
	Reported by Stepan Kasal.

2003-02-12  Alexandre Duret-Lutz  <adl@gnu.org>

	* configure.in: Bump version to 1.7.2c.

	* tests/defs.in: Handle required=makedepend.

	* configure.in, NEWS: Bump version to 1.7.2b.

	* Makefile.am (maintainer-check): Update the diff check
	to account for the recent @SHELL@ substitution.

2003-02-11  Alexandre Duret-Lutz  <adl@gnu.org>

	* lib/depcomp: Do not put comments on the `icc)' line.

	* lib/config.guess, lib/config.sub, lib/texinfo.tex: New upstream
	versions.

	Fix for PR automake/381:
	* automake.in (handle_gettext): Do not print diagnostics
	about po/ and intl/ missing from SUBDIRS if po/ does not