@@ -8080,6 +8080,9 @@ sub read_am_file ($)
 
     $output_trailer .= $comment;
 
+    err_am ("trailing backslash on last line")
+      if $saw_bk;
+
     err_am (@cond_stack ? "unterminated conditionals: @cond_stack"
 	    : "too many conditionals closed in include file")
       if "@saved_cond_stack" ne "@cond_stack";
