@@ -1,3 +1,10 @@
+2003-02-25  Alexandre Duret-Lutz  <adl@gnu.org>
+
+	* automake.in (read_am_file): Catch trailing backslashes on last line.
+	* tests/backsl3.test: New file.
+	* tests/Makefile.am (TESTS): Add backsl3.test.
+	Reported by Akim Demaille.
+
 2003-02-23  Alexandre Duret-Lutz  <adl@gnu.org>
 
 	* automake.texi (FAQ, CVS, maintainer-mode, wildcards)
